<resources>
    <string name="app_name">Recify</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="category">Category</string>
    <string name="categoriesfrag">CategoriesFrag</string>
    <string name="homee">Home</string>
    <string name="what_would_you_like_to_eat">What would you like to eat</string>
    <string name="over_popular_items">Over Popular Items</string>
    <string name="categoryy">Category</string>
    <string name="category_beef">Category : Beef</string>
    <string name="instruction">Instruction</string>
    <string name="area_india">Area : India</string>
    <string name="british">British</string>
    <string name="beef">Beef</string>
    <string name="meal_name">Meal Name</string>
    <string name="read_more">Read more...</string>
    <string name="search_meals">Search Meals..</string>
    <string name="categories">Categories</string>
    <string name="favouritew">Favourites</string>
</resources>