<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.bottomsheet.MealBottomSheetFragment">

    <ImageView
        android:id="@+id/ivBottomSheet"
        android:layout_width="@dimen/_110sdp"
        android:layout_height="@dimen/_110sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="@dimen/_5sdp"
        android:src="@color/gBlack"
        android:scaleType="centerCrop"
        />

    <LinearLayout
        android:id="@+id/llMealDes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/ivBottomSheet"
        app:layout_constraintTop_toTopOf="@id/ivBottomSheet"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:layout_margin="5dp"
        >
        <TextView
            android:id="@+id/bsLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/british"
            android:textSize="@dimen/_10ssp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:fontFamily="@font/myfont"
            android:textColor="@color/gBlack"
            app:drawableLeftCompat="@drawable/ic_baseline_location_on_24"
            app:drawableTint="@color/gBlack" />

        <TextView
            android:id="@+id/bsMealCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/beef"
            android:textSize="@dimen/_10ssp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:fontFamily="@font/myfont"
            android:textColor="@color/gBlack"
            app:drawableLeftCompat="@drawable/category"
            app:drawableTint="@color/gBlack" />
    </LinearLayout>
    <TextView
        android:id="@+id/tvMealName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/meal_name"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold"
        android:textColor="@color/gBlack"
        app:layout_constraintStart_toStartOf="@id/llMealDes"
        app:layout_constraintTop_toBottomOf="@id/llMealDes"
        android:layout_margin="10dp"
        android:fontFamily="@font/myfont"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/read_more"
        android:textSize="@dimen/_15ssp"
        android:textStyle="bold"
        android:textColor="@color/gBlack"
        app:layout_constraintStart_toStartOf="@id/llMealDes"
        app:layout_constraintTop_toBottomOf="@id/tvMealName"
        android:layout_margin="10dp"
        android:fontFamily="@font/myfont"
        />
</androidx.constraintlayout.widget.ConstraintLayout>