<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".actvity.MainActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">



    <LinearLayout
        android:id="@+id/llHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        
        <TextView
            android:id="@+id/tvHome"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/myfont"
            android:text="@string/homee"
            android:textColor="@color/accent"
            android:textStyle="bold"
            android:textSize="@dimen/_25ssp"
            />
        <ImageView
            android:id="@+id/ivSearch"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_baseline_search_24"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/tvWhat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/llHeader"
        app:layout_constraintStart_toStartOf="@id/llHeader"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/myfont"
        android:text="@string/what_would_you_like_to_eat"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="@dimen/_17ssp"
        />
    <androidx.cardview.widget.CardView
        android:id="@+id/cvMeal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_160sdp"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        app:cardCornerRadius="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:cardUseCompatPadding="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvWhat"
        >

        <ImageView
            android:id="@+id/ivRandomMeal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:background="@color/accent" />
    </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/tvOver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cvMeal"
        android:layout_marginTop="@dimen/_18sdp"
        android:fontFamily="@font/myfont"
        android:text="@string/over_popular_items"
        android:textColor="@color/black"
        android:textSize="@dimen/_17sdp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/cvMeal"
        />
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvPopularMeals"
         android:layout_width="wrap_content"
         android:layout_height="@dimen/_90sdp"
         android:layout_marginStart="25dp"
         android:layout_marginEnd="@dimen/_10sdp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tvOver"
         />
    <TextView
        android:id="@+id/tvCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/rvPopularMeals"
        android:layout_marginTop="@dimen/_18sdp"
        android:fontFamily="@font/myfont"
        android:text="@string/categoryy"
        android:textColor="@color/black"
        android:textSize="@dimen/_17sdp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/cvMeal"
        />

    
    <androidx.cardview.widget.CardView
        android:id="@+id/cvCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardUseCompatPadding="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCategory"
        >
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvViewCategories"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            />
    </androidx.cardview.widget.CardView>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>